[gd_scene load_steps=2 format=3 uid="uid://dotl02i34lkhv"]

[ext_resource type="Script" path="res://benchmark.gd" id="1_emshb"]

[node name="Benchmark" type="Node2D"]
script = ExtResource("1_emshb")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2

[node name="RichNodesButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rich Nodes"

[node name="ThinNodesButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Thin Nodes"

[node name="NoNodesButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "No Nodes"

[connection signal="pressed" from="MarginContainer/VBoxContainer/RichNodesButton" to="." method="_on_rich_nodes_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ThinNodesButton" to="." method="_on_thin_nodes_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NoNodesButton" to="." method="_on_no_nodes_button_pressed"]
